# optixstuff

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.md
docs/explanation/: architecture.md  detector_models.md
src/optixstuff/: __init__.py  _repr.py  coronagraph.py  detector.py  disperser.py  exposure.py  optical_elements.py  optical_path.py  primary.py  speckle.py  yippy_coronagraph.py
tests/: conftest.py  test_detector_noise.py  test_detector_qe.py  test_disperser.py  test_exposure.py  test_integration.py  test_optixstuff.py  test_repr_and_factory.py  test_segmented_primary.py  test_speckle.py
